# cursojavapythonaccenture

./: README.md
Biblioteca/: pom.xml
Biblioteca/src/main/java/com/biblioteca/: BibliotecaApp.java  Libro.java  Reserva.java
Biblioteca/src/main/java/com/biblioteca/service/: EmailService.java  LibroService.java  (+6 more)
Ejercicios/: pom.xml
Ejercicios/src/main/java/com/ejercicios/: App.java
Ejercicios/src/test/java/com/ejercicios/: AppTest.java
bibliotecarest/: LibroPeticiones.http  pom.xml
bibliotecarest/src/main/resources/: application.yml  banner.txt
bibliotecarest/src/main/resources/templates/: home.html
contador/: pom.xml
contador/src/main/java/com/sinensia/: AccessCounter.java
python/: diccionario.py
python/biblioteca/: libro.py  main.py
python/biblioteca/src/: main.py
python/biblioteca/src/domain/libro/: libro.py
python/biblioteca/src/domain/material/: material_biblioteca.py  material_digital.py  tipo_material_digital.py
python/biblioteca/src/domain/obra/: tipo_obra.py
python/biblioteca/src/service/: libro_service.py
python/ejercicios/: generador.py  listas.py  tuplas.py  variables.py
python/ejercicios/modulos/: demo_imports.py  main.py
python/ejercicios/modulos/util_texto/: __init__.py  coloreador.py  validador.py
python/passwordcheck/: README.md  passwordcheck.http  pyproject.toml
python/passwordcheck/src/passwordcheck/: __init__.py  api.py  api_schemas.py  main.py
python/passwordcheck/src/passwordcheck/util_texto/data/: passwords.py
python/passwordcheck2/: README.md
python/passwordcheck2/src/passwordcheck/: main.py
(+33 files in other folders)
