[project]
name = "passwordcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "angelAntezana", email = "angel2estevan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[project.scripts]
passwordcheck = "passwordcheck:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
